# labor-dashboard

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  phase2-data-research.md  pyproject.toml
dashboard/: Dockerfile  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/ai/: layout.tsx  page.tsx
dashboard/app/ai-impact/: layout.tsx  page.tsx
dashboard/app/components/: AIImpactTab.tsx  AITab.tsx  ActionCard.tsx  BackNav.tsx  BriefingHeader.tsx  CalloutCard.tsx  Callouts.tsx  CorrelationTab.tsx  DataProvider.tsx  DeepDiveNav.tsx  EventsImpactTab.tsx  GrowthTab.tsx  IndustryBreakdown.tsx  KPICard.tsx  LayoffsTab.tsx  MarketTab.tsx  NewsEventsTab.tsx  SectorMovers.tsx  SpotlightChart.tsx  SuggestedActions.tsx  TechTab.tsx  TimeSeriesChart.tsx  briefing-utils.ts  promo-utils.ts
dashboard/app/correlation/: layout.tsx  page.tsx
dashboard/app/events/: layout.tsx  page.tsx
dashboard/app/growth/: layout.tsx  page.tsx
dashboard/app/layoffs/: layout.tsx  page.tsx
dashboard/app/market/: layout.tsx  page.tsx
dashboard/app/news/: layout.tsx  page.tsx
pipeline/: explore.py  export_ai.py  export_correlation.py  export_event_study.py  export_json.py  export_layoffs.py  export_market.py  export_sectors.py  fix_series.py  fred_client.py  generate_actions.py  ingest.py  ingest_ai_displacement.py  ingest_btos.py  ingest_indeed_ai.py  ingest_layoffs.py  ingest_layoffs_fyi.py  ingest_nvda.py  ingest_sectors.py  ingest_warn.py  refresh_all.sh
pipeline/tests/: conftest.py  test_db.py  test_exports.py  test_freshness.py
(+17 files in other folders)
